# clip-interrogator

./: .gitignore  MANIFEST.in  predict_sample.py  pyproject.toml  requirements.txt  setup.py
blip/: __init__.py  blip.py
clip_interrogator/: __init__.py  clip_interrogator.py
clip_interrogator/data/: age.txt  flavors_reduced.txt  lenses.txt  lightings.txt  locations.txt  mediums.txt  persons_names.txt  trendings.txt
src/clip_interrogator/: __init__.py  clip_interrogator.py  predict_sample.py
src/clip_interrogator/blip/: blip.py  vit.py
src/clip_interrogator/data/: ages.txt  artists.txt  artists_reduced.txt  backgrounds.txt  cameras.txt  clothes.txt  compositions.txt  flavors.txt  focuses.txt  hairs.txt  nsfw_danbooru.txt  nsfw_positions.txt  persons.txt  photographers.txt
tests/: test_predict_sample.py
